--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@ const canvas = document.getElementById('canvas');
 const ctx = canvas.getContext('2d');
 const image = new GIF();
 image.src = "nyancat.jpg";
-ctx.drawGif(image, 3790, 300, 8);
+ctx.drawGIF(image, 3790, 300, 8);
 </script>
 </html>
