--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <script src="main.js"></script> -->
 </head>
 <body>
-    <canvas id="canvas" width="474" height="300"></canvas>
+    <canvas id="canvas" width="1000" height="1000"></canvas>
 </body>
 <script src="draft.js"></script>
 <script>
 const canvas = document.getElementById('canvas');
 const ctx = canvas.getContext('2d');
 const image = new GIF();
-image.src = "nyancat.jpg";
-ctx.drawGIF(image, 3790, 300, 8);
+image.src = "nyancat.jpg"; 
+ctx.drawGIF(image, 0, 0, 7580, 600, 8, true);
 </script>
 </html>
